@@ -1,8 +1,3 @@
-AT_INIT([Redefinition Tests])
-
-AT_TESTED([cobc])
-
-
 AT_SETUP([Undefined entry])
 
 AT_DATA([prog.cob], [
