@@ -1,4 +1,23 @@
-AT_INIT([CALL tests])
+AT_SETUP([MOVE with refmod])
+
+AT_DATA([prog.cob], [
+IDENTIFICATION  DIVISION.
+PROGRAM-ID.     prog.
+DATA            DIVISION.
+WORKING-STORAGE SECTION.
+01 X            PIC 9(4) VALUE 0.
+PROCEDURE       DIVISION.
+  MOVE "1" TO X(1:1).
+  DISPLAY X.
+  STOP RUN.
+])
+
+AT_CHECK([cobc -main prog.cob], [0])
+AT_CHECK([./prog], [0],
+[1000
+])
+
+AT_CLEANUP
 
 
 AT_SETUP([Ambiguous AND/OR (1)])
