@@ -1,6 +1,3 @@
-AT_INIT([Reference Tests])
-
-
 AT_SETUP([Level 01 subscripts])
 
 AT_DATA([prog.cob], [
@@ -363,6 +360,72 @@ PROCEDURE       DIVISION.
 
 AT_CHECK([cobc -C prog.cob], [1], ,
 [prog.cob:8: error: length of `X' out of range: 4
+])
+
+AT_CLEANUP
+
+
+AT_SETUP([Offset out of range at runtime (1)])
+
+AT_DATA([prog.cob], [
+IDENTIFICATION  DIVISION.
+PROGRAM-ID.     prog.
+DATA            DIVISION.
+WORKING-STORAGE SECTION.
+01 X            PIC X(4).
+01 I            PIC 9 VALUE 0.
+PROCEDURE       DIVISION.
+  DISPLAY X(I:1).
+  STOP RUN.
+])
+
+AT_CHECK([cobc -main prog.cob], [0])
+AT_CHECK([./prog], [1], ,
+[prog.cob:9: libcob: offset of `X' out of range: 0
+])
+
+AT_CLEANUP
+
+
+AT_SETUP([Offset out of range at runtime (2)])
+
+AT_DATA([prog.cob], [
+IDENTIFICATION  DIVISION.
+PROGRAM-ID.     prog.
+DATA            DIVISION.
+WORKING-STORAGE SECTION.
+01 X            PIC X(4).
+01 I            PIC 9 VALUE 5.
+PROCEDURE       DIVISION.
+  DISPLAY X(I:1).
+  STOP RUN.
+])
+
+AT_CHECK([cobc -main prog.cob], [0])
+AT_CHECK([./prog], [1], ,
+[prog.cob:9: libcob: offset of `X' out of range: 5
+])
+
+AT_CLEANUP
+
+
+AT_SETUP([Length out of range at runtime (too long)])
+
+AT_DATA([prog.cob], [
+IDENTIFICATION  DIVISION.
+PROGRAM-ID.     prog.
+DATA            DIVISION.
+WORKING-STORAGE SECTION.
+01 X            PIC X(4).
+01 I            PIC 9 VALUE 5.
+PROCEDURE       DIVISION.
+  DISPLAY X(2:I).
+  STOP RUN.
+])
+
+AT_CHECK([cobc -main prog.cob], [0])
+AT_CHECK([./prog], [1], ,
+[prog.cob:9: libcob: length of `X' out of range: 5
 ])
 
 AT_CLEANUP
