@@ -1,3 +1,8 @@
+2003-03-08  Keisuke Nishida  <knishida@netlab.jp>
+
+	* testsuite.at: Include all *.at files.
+	* Makefile.am: Build only a single testsuite script.
+
 2003-02-28  Keisuke Nishida  <knishida@netlab.jp>
 
 	* reference.at: Combine runtime.at and subref.at.
